--- a/indexhmmenu.html
+++ b/indexhmmenu.html
@@ -32,7 +32,7 @@
 
 	<div class="container">
 		<div class="content">
-			<h1> Welcome </h1>
+			<h1 class="wlhover"> Welcome </h1>
 			<p> lorem Ipsum </p>
 			<a href="#" class="btn"> Read more </a>
 		</div>
