--- a/indexhmmenu.html
+++ b/indexhmmenu.html
@@ -7,6 +7,7 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Koulen&display=swap" rel="stylesheet">
+	<script type="text/javascript" src="menujs.js"></script>
 
 
 </head>
@@ -34,7 +35,7 @@
 		<div class="content">
 			<h1 class="wlhover"> Welcome </h1>
 			<p> lorem Ipsum </p>
-			<a href="#" class="btn"> Read more </a>
+			<a href="#" class="btn" onmousemove="return alertjs();"> Read more </a>
 		</div>
 	</div>
 
